fixtures/cs-hash-01/bad/pbkdf2-async-sha1-password.ts
import { pbkdf2 } from "crypto";

export function hashPassword(password: string, salt: string) {
	pbkdf2(password, salt, 1000, 32, "sha1", () => {});
}
